objects/Account.object
<CustomObject>
    <fields>
        <fullName>AW_SubRegionId__c</fullName>
        <description>ID for the sub region</description>
        <externalId>true</externalId>
        <label>Sub Region Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_SubRegion__c</fullName>
        <description>The division of the region</description>
        <label>Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SyncErrorMessage__c</fullName>
        <description>This field helps to notify of any errors when an adviser creates or updates my Prospect Client Account
So that adviser can raise the issue timelessly with Liberty Support.</description>
        <inlineHelpText>The error message is to be quoted when raising an issue with the Liberty Support Team.</inlineHelpText>
        <label>Sync Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AW_Synch_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Sync error has been identified with the clients record, the sync error message will be required to be quoted when raising an issue with the Liberty support team</description>
        <label>Sync Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_TotalAmountInsurancePolicy__c</fullName>
        <description>Total value of a clients Insurance Policy with Liberty</description>
        <label>Total Amount(Insurance Policies)</label>
        <summarizedField>InsurancePolicy.AW_CurrentValue__c</summarizedField>
        <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalAssets__c</fullName>
        <description>Sum of Assets</description>
        <label>Total Assets</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalCriticalIllnessCover__c</fullName>
        <description>The total value of critical illness cover that is  managed by the adviser or by Liberty</description>
        <label>Total Critical Illness Cover</label>
        <summarizedField>InsurancePolicy.AW_TotalCriticalIllnessCover__c</summarizedField>
        <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalDisabilityCoverLumpsum__c</fullName>
        <description>The total value of the disability lumpsum that is  managed by the adviser or by Liberty</description>
        <label>Total Disability Cover (Lumpsum)</label>
        <summarizedField>InsurancePolicy.AW_TotalDisabilityCoverLumpsum__c</summarizedField>
        <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalDisabilityCoverMonth__c</fullName>
        <description>Total value of a clients Monthly Disability Cover managed by  Liberty and the adviser</description>
        <label>Total Disability Cover(Month)</label>
        <summarizedField>InsurancePolicy.AW_TotalDisabilityCoverMonth__c</summarizedField>
        <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldAwayAsset__c</fullName>
        <description>The total value of assets that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>TotalHeldAwayAssets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldAwayBank__c</fullName>
        <description>The total value of a clients bank accounts   that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Bank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldAwayCreditCard__c</fullName>
        <description>The total value of a clients credit card that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Credit Card</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldAwayInvestments__c</fullName>
        <description>Total Of  Investments viewed FA</description>
        <label>Total Held Away Investments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldAwayLoanAccount__c</fullName>
        <description>The total value of a Loan account that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Loan Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldAwayRetirement__c</fullName>
        <description>The total value of retirement cover  that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Retirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldBank__c</fullName>
        <description>The total value of a clients bank accounts that are managed by  the adviser</description>
        <label>Total Held Bank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldCreditCard__c</fullName>
        <description>The total value of the clients credit cards that is  managed by the adviser</description>
        <label>Total Held Credit Card</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldInvestments__c</fullName>
        <description>Total Held  Investments</description>
        <label>Total Held Investments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldLoan__c</fullName>
        <description>The total value of a clients loans that are managed by Liberty or the advisers</description>
        <label>Total Held Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalHeldRetirement__c</fullName>
        <description>The total value of a clients retirement fund that are managed by Liberty or the advisers</description>
        <label>Total Held Retirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalIncomeProtectionLumpsum__c</fullName>
        <description>Total value of the Lumpsum of a clients Income Protection with Liberty</description>
        <label>Total Income Protection (Lumpsum)</label>
        <summarizedField>InsurancePolicy.AW_TotalIncomeProtectionLumpsum__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicy.Status</field>
            <operation>equals</operation>
            <value>IN FORCE</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalIncomeProtectionMonthly__c</fullName>
        <description>Total value of a clients Monthly Income Protection managed by  Liberty or the adviser</description>
        <label>Total Income Protection (Monthly)</label>
        <summarizedField>InsurancePolicy.AW_TotalIncomeProtectionMonthly__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicy.Status</field>
            <operation>equals</operation>
            <value>IN FORCE</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalInvestmentAmount__c</fullName>
        <description>This calculates the Sum of the Current Value from related Investment Accounts.</description>
        <label>Total Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalInvestments__c</fullName>
        <description>Total value of a clients Investments managed by  Liberty or the adviser</description>
        <formula>AW_TotalHeldAwayInvestments__c +  AW_TotalHeldInvestments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Investments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalLiabilities__c</fullName>
        <description>Rolled Up field for Total Liabilities</description>
        <label>Total Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalLifeCover__c</fullName>
        <description>Total value of a clients Life Cover with Liberty</description>
        <label>Total Life Cover</label>
        <summarizedField>InsurancePolicy.AW_TotalLifeCover__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicy.Status</field>
            <operation>equals</operation>
            <value>IN FORCE, ACTIVE</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalLifestyleProtection__c</fullName>
        <description>Total value of a clients Income Lifestyle with Liberty</description>
        <label>Total Lifestyle Protection</label>
        <summarizedField>InsurancePolicy.AW_TotalLifestyleProtection__c</summarizedField>
        <summaryFilterItems>
            <field>InsurancePolicy.Status</field>
            <operation>equals</operation>
            <value>IN FORCE</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_TotalOccupationDuty__c</fullName>
        <description>This will always equate to 100% as it is the total of all the client&apos;s various  occupational duty</description>
        <formula>AW_OccupationDutyAdmin__c  +  AW_OccupationDutyLightManual__c  +  AW_OccupationDutyModerateHeavy__c  +  AW_OccupationDutyNonOfficeSupervisor__c  +  AW_OccupationDutyTravel__c  +  AW_OccupationDutyOfficeSupervisor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Occupation Duty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_TotalRetirementAmount__c</fullName>
        <description>This calculates the Sum of the Current Value from related Retirement Accounts.</description>
        <label>Total Retirement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalRetirement__c</fullName>
        <description>Total value of a clients retirement that are managed by Liberty or the adviser</description>
        <formula>AW_TotalHeldRetirement__c +  AW_TotalHeldAwayRetirement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_UACFID__c</fullName>
        <description>The UACF ID of the owner of the record (if they have one). This field&apos;s sole purpose if for use with Account duplicate rule so that we can differentiate accounts with same Id number across two owners and not consider them duplicates.</description>
        <label>UACF ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_UnitId__c</fullName>
        <description>The unit that the adviser belongs to</description>
        <externalId>true</externalId>
        <label>Unit Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_UpcomingBirthdaysThisMonth__c</fullName>
        <description>Indicates if the clients birthday is within the month</description>
        <formula>PersonBirthdate   &gt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upcoming Birthdays This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_VATNumber__c</fullName>
        <description>The unique number that the client is registered with, which comprises of 10 digits and starts with the number 4</description>
        <label>VAT Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_WasIsOrphanClient__c</fullName>
        <description>This field is used in &apos;Orphan Management Account Report&apos; to capture the number of Accounts which are/were Orphans.</description>
        <label>Was/Is Orphan Client</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Will_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates of the client has a will</description>
        <label>Will Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_Will_Location__c</fullName>
        <description>The location of where the  Will is kept for safe keeping</description>
        <label>Will Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeBusinessEmail__c</fullName>
        <description>Used for integration to populate corporate client&apos;s Email from source systems where usage = Alternative Business</description>
        <label>Alternative Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeBusinessMobile__c</fullName>
        <description>Used for integration to populate corporate client&apos;s Mobile Number from source systems where facility = Cell and usage =  Alternative Business</description>
        <label>Alternative Business Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeEmail__c</fullName>
        <description>Used for integration to populate corporate client&apos;s Email from source systems where usage = Alternative Private</description>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeFax__c</fullName>
        <description>Used for integration to populate corporate client&apos;s fax from source systems where usage = Alternative Business</description>
        <label>Alternative Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativeMobile__c</fullName>
        <description>Used for integration to populate corporate client&apos;s Mobile Number from source systems where facility = Cell and usage =  Alternative Private</description>
        <label>Alternative Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_AlternativePhone__c</fullName>
        <description>Used for integration to populate corporate client&apos;s Phone Number from source systems where facility = Landline and usage =  Alternative Business</description>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_Branch__c</fullName>
        <description>Used in the SRS integration to populate the Branch of the Adviser&apos;s Brokerage</description>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Brokerage__c</fullName>
        <description>Used in the SRS integration to populate the Adviser&apos;s Brokerage name</description>
        <label>Brokerage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BusinessEmail__c</fullName>
        <description>Used for integration to populate corporate client&apos;s Email from source systems with usage = Business</description>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_BusinessMobile__c</fullName>
        <description>Used for integration to populate corporate client&apos;s Mobile Number from source systems where facility = Cell and usage =  Business</description>
        <label>Business Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_CountryOfIncorporation__c</fullName>
        <description>Used for integration to populate client&apos;s Country of Incorporation from source systems.</description>
        <label>Country of Incorporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CreatePublicGroups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Public Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_DateOfBirthSearch__c</fullName>
        <description>Used for global date of birth search. Not required for any page layout</description>
        <label>Date Of Birth</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_DateOfIncorporation__c</fullName>
        <description>Used for integration to populate client&apos;s Date of Incorporation from source systems.</description>
        <label>Date of Incorporation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_DateofRegistrationFrom__c</fullName>
        <description>Used in the SRS integration to populate the Registration From Date for the Adviser&apos;s Brokerage</description>
        <label>Date of Registration (From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_DateofRegistrationTo__c</fullName>
        <description>Used in the SRS integration to populate the Registration To Date for the Adviser&apos;s Brokerage</description>
        <label>Date of Registration (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_Division__c</fullName>
        <description>Used in the SRS integration to populate the Division of the Adviser&apos;s Brokerage</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ForeignTradingName__c</fullName>
        <description>Used for integration to populate client&apos;s Foreign Trading Name from source systems.</description>
        <label>Foreign Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_KnownAsName__c</fullName>
        <description>Used in the SRS integration to populate the Known As Name for the Adviser&apos;s Brokerage</description>
        <label>Known as Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_OrganisationName__c</fullName>
        <description>Used for integration to populate Organization Name from source systems</description>
        <label>Organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_OrganisationType__c</fullName>
        <description>Used for integration to populate client&apos;s Organization Type from source systems.</description>
        <label>Organisation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BANK</fullName>
                    <label>Bank</label>
                </value>
                <value>
                    <fullName>CC</fullName>
                    <label>Closed Corporation</label>
                </value>
                <value>
                    <fullName>COMM</fullName>
                    <label>Commercial Bank</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                    <label>Company</label>
                </value>
                <value>
                    <fullName>COR</fullName>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>FOR_CO</fullName>
                    <label>Foreign Company</label>
                </value>
                <value>
                    <fullName>Foreign Trust</fullName>
                </value>
                <value>
                    <fullName>JOINT</fullName>
                    <label>Joint Company</label>
                </value>
                <value>
                    <fullName>LTD_PVT_CO</fullName>
                    <label>Limited Private Company</label>
                </value>
                <value>
                    <fullName>NON_COMM</fullName>
                    <label>Non-Commercial Bank</label>
                </value>
                <value>
                    <fullName>NPC</fullName>
                    <label>Non Profit Company</label>
                </value>
                <value>
                    <fullName>NPO</fullName>
                    <label>Non Profit Organisation</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PERS</fullName>
                    <label>Person</label>
                </value>
                <value>
                    <fullName>INC</fullName>
                    <label>Personal Liability Company</label>
                </value>
                <value>
                    <fullName>PVT_CO</fullName>
                    <label>Private Company</label>
                </value>
                <value>
                    <fullName>PUB_CO</fullName>
                    <label>Public Company</label>
                </value>
                <value>
                    <fullName>SOC</fullName>
                    <label>State Owned Company</label>
                </value>
                <value>
                    <fullName>TRUST</fullName>
                    <label>Trust</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_PartyType__c</fullName>
        <description>Used in the SRS integration to populate the Party Type</description>
        <label>Party Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Phone__c</fullName>
        <description>Formula field used to store the Phone number</description>
        <formula>Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PublicGroupAccountRead__c</fullName>
        <label>Public Group – Account Read</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PublicGroupCaseRead__c</fullName>
        <label>Public Group – Case Read</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_SAResidentIndicator__c</fullName>
        <description>Field is used to indicate that the Resident belongs to South Africa or not.</description>
        <label>SA Resident Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_SRSID__c</fullName>
        <description>Used in the SRS integration to populate the SRS ID for the Adviser&apos;s Brokerage</description>
        <label>SRS ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMN_SalesCategory__c</fullName>
        <description>Used in the SRS integration to populate the Sales Category for the Adviser&apos;s Brokerage</description>
        <label>Sales Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_TradingName__c</fullName>
        <description>Used for integration to populate client&apos;s Trading Name from source systems.</description>
        <label>Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Unit__c</fullName>
        <description>Used in the SRS integration to populate the Unit of the Adviser&apos;s Brokerage</description>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__AUM__c</fullName>
        <description>Value of client&apos;s financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalAUMPrimaryOwner__c + FinServ__TotalAUMJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BankNumber__c</fullName>
        <label>Bank Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__BorrowingHistory__c</fullName>
        <label>Borrowing History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Limited to No History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__BorrowingPriorities__c</fullName>
        <label>Borrowing Priorities</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Build Equity</fullName>
                </value>
                <value>
                    <fullName>Debt Consolidation</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>Large Capital Purchases</fullName>
                </value>
                <value>
                    <fullName>Property Purchase</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__BranchCode__c</fullName>
        <label>Branch Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__BranchName__c</fullName>
        <label>Branch Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ClaimsOnHouseholdPolicies__c</fullName>
        <description>The total number of claims that were ever raised for the policies currently owned by the policyholder&apos;s primary household.</description>
        <inlineHelpText>This includes all the claims (irrespective of their current status), including the ones that are settled, as long as the related policy is active.</inlineHelpText>
        <label>Claims on Household Policies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__ClientCategory__c</fullName>
        <inlineHelpText>You can segment your clients in different categories</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ConversionDateTime__c</fullName>
        <description>Lead conversion Date and Time</description>
        <label>Conversion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__CreditRating__c</fullName>
        <label>Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerID__c</fullName>
        <label>Customer ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerSegment__c</fullName>
        <label>Customer Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Market</fullName>
                </value>
                <value>
                    <fullName>Mass Affluent</fullName>
                </value>
                <value>
                    <fullName>Wealth Accumulation</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>Long Term Growth</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Millennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CustomerType__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Relational</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>